Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -53,24 +53,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2"
+       "0"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "vacation_days = 0\n",
-    "vacation_days += 1\n",
-    "vacation_days += 1\n",
+    "vacation_days += 1 # var = var + 1\n",
+    "vacation_days -= 1 # var = var - 1\n",
     "vacation_days"
    ]
   },
@@ -86,28 +86,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "vacation_days = 1\n",
-    "if False:\n",
+    "var = 1\n",
+    "varo = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "var != varo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#vacation_days = 1\n",
+    "if var == varo : # True \n",
     "    # code does not run as conditional argument False\n",
     "    vacation_days += 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1"
+       "5"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -138,18 +168,19 @@
        "3"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "vacation_days = 1\n",
+    "#vacation_days = 1\n",
     "if False:\n",
     "    # if block begins\n",
-    "    vacation_days += 1\n",
+    "    vacation_days += 1  # even\n",
+    "    \n",
     "# if block ends\n",
-    "vacation_days += 2\n",
+    "vacation_days += 2  # odd\n",
     "vacation_days"
    ]
   },
@@ -164,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +204,7 @@
        "2"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,6 +214,7 @@
     "if True:\n",
     "    # code in if block runs, as True\n",
     "    vacation_days += 1\n",
+    "    \n",
     "vacation_days"
    ]
   },
@@ -204,42 +236,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "def long_vacation(number_of_days):\n",
+    "    \n",
     "    if number_of_days > 4:\n",
-    "        return 'that is a long vacation'"
+    "        print ('that is a long vacation')\n",
+    "        \n",
+    "    return (\"Done\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "that is a long vacation\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "'that is a long vacation'"
+       "'Done'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "long_vacation(5) # 'that is a long vacation'"
+    "long_vacation(6) # 'that is a long vacation'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Done'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "long_vacation(3) # None"
    ]
@@ -260,51 +313,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "def vacation_length(number_of_days):\n",
-    "    if number_of_days > 4:\n",
-    "        return 'that is a long vacation'\n",
+    "    \n",
+    "    if number_of_days >= 4:\n",
+    "        print ('that is a long vacation')\n",
+    "    \n",
     "    else:\n",
-    "        return 'not so long'"
+    "        print ('not so long')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'not so long'"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "that is a long vacation\n"
+     ]
     }
    ],
    "source": [
-    "vacation_length(3) # 'not so long'"
+    "vacation_length(4) # 'not so long'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'that is a long vacation'"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "that is a long vacation\n"
+     ]
     }
    ],
    "source": [
@@ -372,23 +421,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "2"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "vacation_days = 0\n",
-    "if vacation_days:\n",
+    "# vacation_days = 0\n",
+    "if vacation_days < 4 : # == < > <= >= != \n",
     "    # this is not run\n",
     "    vacation_days += 1\n",
     "vacation_days"
@@ -423,8 +472,10 @@
    ],
    "source": [
     "greeting = ''\n",
-    "if greeting:\n",
+    "\n",
+    "if greeting: # not have condition statment \n",
     "    greeting += 'Hello'\n",
+    "    \n",
     "else:\n",
     "    greeting += 'Goodbye'\n",
     "greeting"
@@ -439,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 30,
    "metadata": {
     "scrolled": true
    },
@@ -450,7 +501,7 @@
        "False"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -461,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +521,7 @@
        "True"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -495,10 +546,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello\n",
+      "bonjour\n",
+      "hola\n",
+      "hallo\n",
+      "ciao\n",
+      "ola\n",
+      "namaste\n",
+      "salam\n",
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in greetings: # print elements\n",
+    "    print (i)\n",
+    "\n",
+    "for i in range(len(greetings)): # print index \n",
+    "    print (i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
    "metadata": {
     "scrolled": true
    },
+   "outputs": [],
+   "source": [
+    "greetings = ['hello', 'bonjour', 'hola', 'hallo', 'ciao', 'ola', 'namaste', 'salam']\n",
+    "\n",
+    "def starts_with_h(words,a):\n",
+    "    selected = []\n",
+    "    \n",
+    "    for i in words:\n",
+    "        if i.startswith(a = 'c'): # aalashan mota`3ayer mafesh ' '  | paramter is variable and have (data type) string or integer\n",
+    "            selected.append(i) # add\n",
+    "            \n",
+    "    return selected \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -506,22 +618,13 @@
        "['hello', 'hola', 'hallo']"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "greetings = ['hello', 'bonjour', 'hola', 'hallo', 'ciao', 'ola', 'namaste', 'salam']\n",
-    "\n",
-    "def starts_with_h(words):\n",
-    "    selected = []\n",
-    "    for word in words:\n",
-    "        if word.startswith('h'):\n",
-    "            selected.append(word)\n",
-    "    return selected \n",
-    "\n",
-    "starts_with_h(greetings)"
+    "starts_with_h(greetings,'h')"
    ]
   },
   {
@@ -564,7 +667,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
